criando estrutura de testes para a entidade category em src/category/domain/entities/__tests__/category.spec.ts

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,12 +7,14 @@
     "experimentalDecorators": true,
     "allowSyntheticDefaultImports": true,
     "target": "es2018",
-    "sourceMap": true,
-    "outDir": "./dist",
-    "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "skipLibCheck": true,
+    "strictNullChecks": false,
+    "noImplicitAny": false,
+    "strictBindCallApply": false,
+    "forceConsistentCasingInFileNames": false,
+    "noFallthroughCasesInSwitch": false,
+    "allowJs": true
   },
-  "include": [
-    "./src", "./test"
-  ]
+  "include": ["./src", "./test"]
 }
