--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "@types/node": "^20.8.9",
     "jest": "^29.7.0",
     "ts-node": "^10.9.1",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "uuidv4": "^6.2.13"
   },
   "dependencies": {
     "lodash": "^4.17.21",
