--- a/package.json
+++ b/package.json
@@ -3,6 +3,42 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "imports": {
+    "#seedwork/domain": "./dist/@seedwork/domain/index.js",
+    "#seedwork/*": "./dist/@seedwork/*.js",
+    "#category/domain": "./dist/category/domain/index.js",
+    "#category/*": "./dist/category/*.js"
+  },
+  "exports": {
+    "./@seedwork/application": "./dist/@seedwork/application/index.js",
+    "./@seedwork/domain": "./dist/@seedwork/domain/index.js",
+    "./@seedwork/infra": "./dist/@seedwork/infra/index.js",
+    "./category/application": "./dist/category/application/index.js",
+    "./category/domain": "./dist/category/domain/index.js",
+    "./category/infra": "./dist/category/infra/index.js"
+  },
+  "typesVersions": {
+    ">=4.0": {
+      "@seedwork/application": [
+        "./dist/@seedwork/application/index.d.ts"
+      ],
+      "@seedwork/domain": [
+        "./dist/@seedwork/domain/index.d.ts"
+      ],
+      "@seedwork/infra": [
+        "./dist/@seedwork/infra/index.d.ts"
+      ],
+      "category/application": [
+        "./dist/category/application/index.d.ts"
+      ],
+      "category/domain": [
+        "./dist/category/domain/index.d.ts"
+      ],
+      "category/infra": [
+        "./dist/category/infra/index.d.ts"
+      ]
+    }
+  },
   "scripts": {
     "ts-node": "ts-node",
     "tsc": "tsc",
@@ -11,7 +47,9 @@
     "build:w": "tsc -b ./tsconfig.json -w",
     "clean:tsc": "rm tsconfig.tsbuildinfo",
     "test": "jest",
-    "test:cov": "test -- --coverage"
+    "test:cov": "test -- --coverage",
+    "cti": "cti",
+    "cti:make": "sh ./cti.sh"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +60,7 @@
     "@types/jest": "^29.5.6",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.8.9",
+    "create-ts-index": "^1.14.0",
     "jest": "^29.7.0",
     "regenerator-runtime": "^0.14.0",
     "ts-node": "^10.9.1",
