--- a/package.json
+++ b/package.json
@@ -1,75 +1,21 @@
 {
+  "private": true,
   "name": "micro-videos-typescript",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
   "main": "index.js",
-  "imports": {
-    "#seedwork/domain": "./dist/@seedwork/domain/index.js",
-    "#seedwork/*": "./dist/@seedwork/*.js",
-    "#category/domain": "./dist/category/domain/index.js",
-    "#category/*": "./dist/category/*.js"
+  "workspaces": [
+    "./src/@core",
+    "./src/nestjs"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/alex-candido/fc3-admin-do-catalogo-typescript.git"
   },
-  "exports": {
-    "./@seedwork/application": "./dist/@seedwork/application/index.js",
-    "./@seedwork/domain": "./dist/@seedwork/domain/index.js",
-    "./@seedwork/infra": "./dist/@seedwork/infra/index.js",
-    "./category/application": "./dist/category/application/index.js",
-    "./category/domain": "./dist/category/domain/index.js",
-    "./category/infra": "./dist/category/infra/index.js"
+  "author": "Alex Cândido <alex.candido.tec@gmail.com>",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/alex-candido/fc3-admin-do-catalogo-typescript.git/issues"
   },
-  "typesVersions": {
-    ">=4.0": {
-      "@seedwork/application": [
-        "./dist/@seedwork/application/index.d.ts"
-      ],
-      "@seedwork/domain": [
-        "./dist/@seedwork/domain/index.d.ts"
-      ],
-      "@seedwork/infra": [
-        "./dist/@seedwork/infra/index.d.ts"
-      ],
-      "category/application": [
-        "./dist/category/application/index.d.ts"
-      ],
-      "category/domain": [
-        "./dist/category/domain/index.d.ts"
-      ],
-      "category/infra": [
-        "./dist/category/infra/index.d.ts"
-      ]
-    }
-  },
-  "scripts": {
-    "ts-node": "ts-node",
-    "tsc": "tsc",
-    "tsc:check": "tsc --noEmit",
-    "build": "tsc -b ./tsconfig.json",
-    "build:w": "tsc -b ./tsconfig.json -w",
-    "clean:tsc": "rm tsconfig.tsbuildinfo",
-    "test": "jest",
-    "test:cov": "test -- --coverage",
-    "cti": "cti",
-    "cti:make": "sh ./cti.sh"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "devDependencies": {
-    "@swc/core": "^1.3.95",
-    "@swc/jest": "^0.2.29",
-    "@types/jest": "^29.5.6",
-    "@types/lodash": "^4.14.200",
-    "@types/node": "^20.8.9",
-    "create-ts-index": "^1.14.0",
-    "jest": "^29.7.0",
-    "regenerator-runtime": "^0.14.0",
-    "ts-node": "^10.9.1",
-    "typescript": "^5.2.2",
-    "uuidv4": "^6.2.13"
-  },
-  "dependencies": {
-    "class-validator": "^0.14.0",
-    "lodash": "^4.17.21",
-    "ts-jest": "^29.1.1"
-  }
+  "homepage": "https://github.com/alex-candido/fc3-admin-do-catalogo-typescript.git#readme"
 }
