--- a/src/@core/package.json
+++ b/src/@core/package.json
@@ -59,7 +59,7 @@
     "@swc/jest": "^0.2.29",
     "@types/jest": "^29.5.6",
     "@types/lodash": "^4.14.200",
-    "@types/node": "^20.8.9",
+    "@types/node": "^20.10.4",
     "create-ts-index": "^1.14.0",
     "jest": "^29.7.0",
     "regenerator-runtime": "^0.14.0",
@@ -71,6 +71,9 @@
     "@nestjs/cli": "^10.2.1",
     "class-validator": "^0.14.0",
     "lodash": "^4.17.21",
+    "sequelize": "^6.35.1",
+    "sequelize-typescript": "^2.1.6",
+    "sqlite3": "^5.1.6",
     "ts-jest": "^29.1.1"
   }
 }
