--- a/src/@core/package.json
+++ b/src/@core/package.json
@@ -57,6 +57,7 @@
   "devDependencies": {
     "@swc/core": "^1.3.95",
     "@swc/jest": "^0.2.29",
+    "@types/chance": "^1.1.6",
     "@types/jest": "^29.5.6",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.10.4",
@@ -69,7 +70,9 @@
   },
   "dependencies": {
     "@nestjs/cli": "^10.2.1",
+    "chance": "^1.1.11",
     "class-validator": "^0.14.0",
+    "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
     "sequelize": "^6.35.1",
     "sequelize-typescript": "^2.1.6",
