--- a/src/@core/package.json
+++ b/src/@core/package.json
@@ -77,6 +77,7 @@
     "sequelize": "^6.35.1",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.6",
-    "ts-jest": "^29.1.1"
+    "ts-jest": "^29.1.1",
+    "umzug": "^3.5.0"
   }
 }
