--- a/src/@core/package.json
+++ b/src/@core/package.json
@@ -74,6 +74,7 @@
     "class-validator": "^0.14.0",
     "dotenv": "^16.3.1",
     "lodash": "^4.17.21",
+    "mysql2": "^3.6.5",
     "sequelize": "^6.35.1",
     "sequelize-typescript": "^2.1.6",
     "sqlite3": "^5.1.6",
