--- a/src/@core/package.json
+++ b/src/@core/package.json
@@ -61,6 +61,7 @@
     "@types/jest": "^29.5.6",
     "@types/lodash": "^4.14.200",
     "@types/node": "^20.10.4",
+    "@types/uuid": "^9.0.7",
     "create-ts-index": "^1.14.0",
     "jest": "^29.7.0",
     "regenerator-runtime": "^0.14.0",
