--- a/src/nestjs/package.json
+++ b/src/nestjs/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "prebuild": "rimraf dist",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -15,9 +16,10 @@
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
     "test": "jest",
     "test:watch": "jest --watch",
-    "test:cov": "jest --collect-coverage",
+    "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest.config.ts"
+    "test:e2e": "jest --config ./test/jest.config.ts",
+    "migrate": "node -r ts-node/register/transpile-only ./src/migrate.ts" 
   },
   "dependencies": {
     "@nestjs/common": "^10.0.0",
